parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     statement -> instruction
Rule 3     instruction -> IF ( expression ) statement
Rule 4     instruction -> IF ( expression ) statement ELSE statement
Rule 5     instruction -> WHILE ( expression ) statement
Rule 6     expression -> RETURN expression
Rule 7     instruction -> FOR ID = range statement
Rule 8     statements -> statement
Rule 9     statements -> statements statement
Rule 10    statement -> expression ;
Rule 11    statement -> { statements }
Rule 12    statement -> PRINT expressions ;
Rule 13    expressions -> expression
Rule 14    expressions -> expressions , expression
Rule 15    expression -> [ minit ]
Rule 16    expression -> [ ]
Rule 17    minit -> mrow ;
Rule 18    minit -> mrow
Rule 19    minit -> [ mrow ] ,
Rule 20    minit -> [ mrow ]
Rule 21    minit -> mrow ; minit
Rule 22    minit -> [ mrow ] , minit
Rule 23    mrow -> number
Rule 24    mrow -> number , mrow
Rule 25    number -> INTNUM
Rule 26    number -> FLOATNUM
Rule 27    expression -> assignable = expression
Rule 28    expression -> - expression
Rule 29    expression -> expression '
Rule 30    expression -> assignable ADDASSIGN expression
Rule 31    expression -> assignable SUBASSIGN expression
Rule 32    expression -> assignable MULASSIGN expression
Rule 33    expression -> assignable DIVASSIGN expression
Rule 34    expression -> expression + expression
Rule 35    expression -> expression - expression
Rule 36    expression -> expression DOTADD expression
Rule 37    expression -> expression DOTSUB expression
Rule 38    expression -> expression * expression
Rule 39    expression -> expression / expression
Rule 40    expression -> expression DOTMUL expression
Rule 41    expression -> expression DOTDIV expression
Rule 42    expression -> expression EQ expression
Rule 43    expression -> expression NOTEQ expression
Rule 44    expression -> expression GT expression
Rule 45    expression -> expression LT expression
Rule 46    expression -> expression GTEQ expression
Rule 47    expression -> expression LTEQ expression
Rule 48    expression -> ZEROS ( expressions )
Rule 49    expression -> ONES ( expressions )
Rule 50    expression -> EYE ( expressions )
Rule 51    expression -> number
Rule 52    expression -> STRING
Rule 53    expression -> assignable
Rule 54    assignable -> ID
Rule 55    assignable -> matrixcellgetter
Rule 56    matrixcellgetter -> ID [ INTNUM , INTNUM ]
Rule 57    expression -> ( expression )
Rule 58    expression -> BREAK
Rule 59    expression -> CONTINUE
Rule 60    expression -> range
Rule 61    range -> expression : expression

Terminals, with rules where they appear

'                    : 29
(                    : 3 4 5 48 49 50 57
)                    : 3 4 5 48 49 50 57
*                    : 38
+                    : 34
,                    : 14 19 22 24 56
-                    : 28 35
/                    : 39
:                    : 61
;                    : 10 12 17 21
=                    : 7 27
ADDASSIGN            : 30
BREAK                : 58
COMMENT              : 
CONTINUE             : 59
DIVASSIGN            : 33
DOTADD               : 36
DOTDIV               : 41
DOTMUL               : 40
DOTSUB               : 37
ELSE                 : 4
EQ                   : 42
EYE                  : 50
FLOATNUM             : 26
FOR                  : 7
GT                   : 44
GTEQ                 : 46
ID                   : 7 54 56
IF                   : 3 4
INTNUM               : 25 56 56
LT                   : 45
LTEQ                 : 47
MULASSIGN            : 32
NOTEQ                : 43
ONES                 : 49
PRINT                : 12
RETURN               : 6
STRING               : 52
SUBASSIGN            : 31
WHILE                : 5
ZEROS                : 48
[                    : 15 16 19 20 22 56
]                    : 15 16 19 20 22 56
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

assignable           : 27 30 31 32 33 53
expression           : 3 4 5 6 10 13 14 27 28 29 30 31 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 57 61 61
expressions          : 12 14 48 49 50
instruction          : 2
matrixcellgetter     : 55
minit                : 15 21 22
mrow                 : 17 18 19 20 21 22 24
number               : 23 24 51
range                : 7 60
start                : 0
statement            : 3 4 4 5 7 8 9
statements           : 1 9 11

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (8) statements -> . statement
    (9) statements -> . statements statement
    (2) statement -> . instruction
    (10) statement -> . expression ;
    (11) statement -> . { statements }
    (12) statement -> . PRINT expressions ;
    (3) instruction -> . IF ( expression ) statement
    (4) instruction -> . IF ( expression ) statement ELSE statement
    (5) instruction -> . WHILE ( expression ) statement
    (7) instruction -> . FOR ID = range statement
    (6) expression -> . RETURN expression
    (15) expression -> . [ minit ]
    (16) expression -> . [ ]
    (27) expression -> . assignable = expression
    (28) expression -> . - expression
    (29) expression -> . expression '
    (30) expression -> . assignable ADDASSIGN expression
    (31) expression -> . assignable SUBASSIGN expression
    (32) expression -> . assignable MULASSIGN expression
    (33) expression -> . assignable DIVASSIGN expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression DOTADD expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NOTEQ expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression GTEQ expression
    (47) expression -> . expression LTEQ expression
    (48) expression -> . ZEROS ( expressions )
    (49) expression -> . ONES ( expressions )
    (50) expression -> . EYE ( expressions )
    (51) expression -> . number
    (52) expression -> . STRING
    (53) expression -> . assignable
    (57) expression -> . ( expression )
    (58) expression -> . BREAK
    (59) expression -> . CONTINUE
    (60) expression -> . range
    (54) assignable -> . ID
    (55) assignable -> . matrixcellgetter
    (25) number -> . INTNUM
    (26) number -> . FLOATNUM
    (61) range -> . expression : expression
    (56) matrixcellgetter -> . ID [ INTNUM , INTNUM ]

    {               shift and go to state 6
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    RETURN          shift and go to state 14
    [               shift and go to state 15
    -               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    STRING          shift and go to state 22
    (               shift and go to state 9
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    ID              shift and go to state 12
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27

    start                          shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    range                          shift and go to state 13
    assignable                     shift and go to state 16
    number                         shift and go to state 21
    matrixcellgetter               shift and go to state 25

state 1

    (0) S' -> start .



state 2

    (1) start -> statements .
    (9) statements -> statements . statement
    (2) statement -> . instruction
    (10) statement -> . expression ;
    (11) statement -> . { statements }
    (12) statement -> . PRINT expressions ;
    (3) instruction -> . IF ( expression ) statement
    (4) instruction -> . IF ( expression ) statement ELSE statement
    (5) instruction -> . WHILE ( expression ) statement
    (7) instruction -> . FOR ID = range statement
    (6) expression -> . RETURN expression
    (15) expression -> . [ minit ]
    (16) expression -> . [ ]
    (27) expression -> . assignable = expression
    (28) expression -> . - expression
    (29) expression -> . expression '
    (30) expression -> . assignable ADDASSIGN expression
    (31) expression -> . assignable SUBASSIGN expression
    (32) expression -> . assignable MULASSIGN expression
    (33) expression -> . assignable DIVASSIGN expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression DOTADD expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NOTEQ expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression GTEQ expression
    (47) expression -> . expression LTEQ expression
    (48) expression -> . ZEROS ( expressions )
    (49) expression -> . ONES ( expressions )
    (50) expression -> . EYE ( expressions )
    (51) expression -> . number
    (52) expression -> . STRING
    (53) expression -> . assignable
    (57) expression -> . ( expression )
    (58) expression -> . BREAK
    (59) expression -> . CONTINUE
    (60) expression -> . range
    (54) assignable -> . ID
    (55) assignable -> . matrixcellgetter
    (25) number -> . INTNUM
    (26) number -> . FLOATNUM
    (61) range -> . expression : expression
    (56) matrixcellgetter -> . ID [ INTNUM , INTNUM ]

    $end            reduce using rule 1 (start -> statements .)
    {               shift and go to state 6
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    RETURN          shift and go to state 14
    [               shift and go to state 15
    -               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    STRING          shift and go to state 22
    (               shift and go to state 9
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    ID              shift and go to state 12
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27

    statement                      shift and go to state 28
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    range                          shift and go to state 13
    assignable                     shift and go to state 16
    number                         shift and go to state 21
    matrixcellgetter               shift and go to state 25

state 3

    (8) statements -> statement .

    {               reduce using rule 8 (statements -> statement .)
    PRINT           reduce using rule 8 (statements -> statement .)
    IF              reduce using rule 8 (statements -> statement .)
    WHILE           reduce using rule 8 (statements -> statement .)
    FOR             reduce using rule 8 (statements -> statement .)
    RETURN          reduce using rule 8 (statements -> statement .)
    [               reduce using rule 8 (statements -> statement .)
    -               reduce using rule 8 (statements -> statement .)
    ZEROS           reduce using rule 8 (statements -> statement .)
    ONES            reduce using rule 8 (statements -> statement .)
    EYE             reduce using rule 8 (statements -> statement .)
    STRING          reduce using rule 8 (statements -> statement .)
    (               reduce using rule 8 (statements -> statement .)
    BREAK           reduce using rule 8 (statements -> statement .)
    CONTINUE        reduce using rule 8 (statements -> statement .)
    ID              reduce using rule 8 (statements -> statement .)
    INTNUM          reduce using rule 8 (statements -> statement .)
    FLOATNUM        reduce using rule 8 (statements -> statement .)
    $end            reduce using rule 8 (statements -> statement .)
    }               reduce using rule 8 (statements -> statement .)


state 4

    (2) statement -> instruction .

    {               reduce using rule 2 (statement -> instruction .)
    PRINT           reduce using rule 2 (statement -> instruction .)
    IF              reduce using rule 2 (statement -> instruction .)
    WHILE           reduce using rule 2 (statement -> instruction .)
    FOR             reduce using rule 2 (statement -> instruction .)
    RETURN          reduce using rule 2 (statement -> instruction .)
    [               reduce using rule 2 (statement -> instruction .)
    -               reduce using rule 2 (statement -> instruction .)
    ZEROS           reduce using rule 2 (statement -> instruction .)
    ONES            reduce using rule 2 (statement -> instruction .)
    EYE             reduce using rule 2 (statement -> instruction .)
    STRING          reduce using rule 2 (statement -> instruction .)
    (               reduce using rule 2 (statement -> instruction .)
    BREAK           reduce using rule 2 (statement -> instruction .)
    CONTINUE        reduce using rule 2 (statement -> instruction .)
    ID              reduce using rule 2 (statement -> instruction .)
    INTNUM          reduce using rule 2 (statement -> instruction .)
    FLOATNUM        reduce using rule 2 (statement -> instruction .)
    $end            reduce using rule 2 (statement -> instruction .)
    }               reduce using rule 2 (statement -> instruction .)
    ELSE            reduce using rule 2 (statement -> instruction .)


state 5

    (10) statement -> expression . ;
    (29) expression -> expression . '
    (34) expression -> expression . + expression
    (35) expression -> expression . - expression
    (36) expression -> expression . DOTADD expression
    (37) expression -> expression . DOTSUB expression
    (38) expression -> expression . * expression
    (39) expression -> expression . / expression
    (40) expression -> expression . DOTMUL expression
    (41) expression -> expression . DOTDIV expression
    (42) expression -> expression . EQ expression
    (43) expression -> expression . NOTEQ expression
    (44) expression -> expression . GT expression
    (45) expression -> expression . LT expression
    (46) expression -> expression . GTEQ expression
    (47) expression -> expression . LTEQ expression
    (61) range -> expression . : expression

    ;               shift and go to state 29
    '               shift and go to state 30
    +               shift and go to state 31
    -               shift and go to state 32
    DOTADD          shift and go to state 33
    DOTSUB          shift and go to state 34
    *               shift and go to state 35
    /               shift and go to state 36
    DOTMUL          shift and go to state 37
    DOTDIV          shift and go to state 38
    EQ              shift and go to state 39
    NOTEQ           shift and go to state 40
    GT              shift and go to state 41
    LT              shift and go to state 42
    GTEQ            shift and go to state 43
    LTEQ            shift and go to state 44
    :               shift and go to state 45


state 6

    (11) statement -> { . statements }
    (8) statements -> . statement
    (9) statements -> . statements statement
    (2) statement -> . instruction
    (10) statement -> . expression ;
    (11) statement -> . { statements }
    (12) statement -> . PRINT expressions ;
    (3) instruction -> . IF ( expression ) statement
    (4) instruction -> . IF ( expression ) statement ELSE statement
    (5) instruction -> . WHILE ( expression ) statement
    (7) instruction -> . FOR ID = range statement
    (6) expression -> . RETURN expression
    (15) expression -> . [ minit ]
    (16) expression -> . [ ]
    (27) expression -> . assignable = expression
    (28) expression -> . - expression
    (29) expression -> . expression '
    (30) expression -> . assignable ADDASSIGN expression
    (31) expression -> . assignable SUBASSIGN expression
    (32) expression -> . assignable MULASSIGN expression
    (33) expression -> . assignable DIVASSIGN expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression DOTADD expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NOTEQ expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression GTEQ expression
    (47) expression -> . expression LTEQ expression
    (48) expression -> . ZEROS ( expressions )
    (49) expression -> . ONES ( expressions )
    (50) expression -> . EYE ( expressions )
    (51) expression -> . number
    (52) expression -> . STRING
    (53) expression -> . assignable
    (57) expression -> . ( expression )
    (58) expression -> . BREAK
    (59) expression -> . CONTINUE
    (60) expression -> . range
    (54) assignable -> . ID
    (55) assignable -> . matrixcellgetter
    (25) number -> . INTNUM
    (26) number -> . FLOATNUM
    (61) range -> . expression : expression
    (56) matrixcellgetter -> . ID [ INTNUM , INTNUM ]

    {               shift and go to state 6
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    RETURN          shift and go to state 14
    [               shift and go to state 15
    -               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    STRING          shift and go to state 22
    (               shift and go to state 9
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    ID              shift and go to state 12
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27

    statements                     shift and go to state 46
    statement                      shift and go to state 3
    instruction                    shift and go to state 4
    expression                     shift and go to state 5
    range                          shift and go to state 13
    assignable                     shift and go to state 16
    number                         shift and go to state 21
    matrixcellgetter               shift and go to state 25

state 7

    (12) statement -> PRINT . expressions ;
    (13) expressions -> . expression
    (14) expressions -> . expressions , expression
    (6) expression -> . RETURN expression
    (15) expression -> . [ minit ]
    (16) expression -> . [ ]
    (27) expression -> . assignable = expression
    (28) expression -> . - expression
    (29) expression -> . expression '
    (30) expression -> . assignable ADDASSIGN expression
    (31) expression -> . assignable SUBASSIGN expression
    (32) expression -> . assignable MULASSIGN expression
    (33) expression -> . assignable DIVASSIGN expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression DOTADD expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NOTEQ expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression GTEQ expression
    (47) expression -> . expression LTEQ expression
    (48) expression -> . ZEROS ( expressions )
    (49) expression -> . ONES ( expressions )
    (50) expression -> . EYE ( expressions )
    (51) expression -> . number
    (52) expression -> . STRING
    (53) expression -> . assignable
    (57) expression -> . ( expression )
    (58) expression -> . BREAK
    (59) expression -> . CONTINUE
    (60) expression -> . range
    (54) assignable -> . ID
    (55) assignable -> . matrixcellgetter
    (25) number -> . INTNUM
    (26) number -> . FLOATNUM
    (61) range -> . expression : expression
    (56) matrixcellgetter -> . ID [ INTNUM , INTNUM ]

    RETURN          shift and go to state 14
    [               shift and go to state 15
    -               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    STRING          shift and go to state 22
    (               shift and go to state 9
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    ID              shift and go to state 12
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27

    expressions                    shift and go to state 47
    expression                     shift and go to state 48
    assignable                     shift and go to state 16
    number                         shift and go to state 21
    range                          shift and go to state 13
    matrixcellgetter               shift and go to state 25

state 8

    (3) instruction -> IF . ( expression ) statement
    (4) instruction -> IF . ( expression ) statement ELSE statement

    (               shift and go to state 49


state 9

    (57) expression -> ( . expression )
    (6) expression -> . RETURN expression
    (15) expression -> . [ minit ]
    (16) expression -> . [ ]
    (27) expression -> . assignable = expression
    (28) expression -> . - expression
    (29) expression -> . expression '
    (30) expression -> . assignable ADDASSIGN expression
    (31) expression -> . assignable SUBASSIGN expression
    (32) expression -> . assignable MULASSIGN expression
    (33) expression -> . assignable DIVASSIGN expression
    (34) expression -> . expression + expression
    (35) expression -> . expression - expression
    (36) expression -> . expression DOTADD expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression * expression
    (39) expression -> . expression / expression
    (40) expression -> . expression DOTMUL expression
    (41) expression -> . expression DOTDIV expression
    (42) expression -> . expression EQ expression
    (43) expression -> . expression NOTEQ expression
    (44) expression -> . expression GT expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression GTEQ expression
    (47) expression -> . expression LTEQ expression
    (48) expression -> . ZEROS ( expressions )
    (49) expression -> . ONES ( expressions )
    (50) expression -> . EYE ( expressions )
    (51) expression -> . number
    (52) expression -> . STRING
    (53) expression -> . assignable
    (57) expression -> . ( expression )
    (58) expression -> . BREAK
    (59) expression -> . CONTINUE
    (60) expression -> . range
    (54) assignable -> . ID
    (55) assignable -> . matrixcellgetter
    (25) number -> . INTNUM
    (26) number -> . FLOATNUM
    (61) range -> . expression : expression
    (56) matrixcellgetter -> . ID [ INTNUM , INTNUM ]

    RETURN          shift and go to state 14
    [               shift and go to state 15
    -               shift and go to state 17
    ZEROS           shift and go to state 18
    ONES            shift and go to state 19
    EYE             shift and go to state 20
    STRING          shift and go to state 22
    (               shift and go to state 9
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    ID              shift and go to state 12
    INTNUM          shift and go to state 26
    FLOATNUM        shift and go to state 27

    expression                     shift and go to state 50
    assignable                     shift and go to state 16
    number                         shift and go to state 21
    range                          shift and go to state 13
    matrixcellgetter               shift and go to state 25

state 10

    (5) instruction -> WHILE . ( expression ) statement

    (               shift and go to state 51


state 11

    (7) instruction -> FOR . ID = range statement

    ID              shift and go to state 52


state 12

    (54) assignable -> ID .
    (56) matrixcellgetter -> ID . [ INTNUM , INTNUM ]

  ! shift/reduce conflict for [ resolved as shift
    =               reduce using rule 54 (assignable -> ID .)
    ADDASSIGN       reduce using rule 54 (assignable -> ID .)
    SUBASSIGN       reduce using rule 54 (assignable -> ID .)
    MULASSIGN       reduce using rule 54 (assignable -> ID .)
    DIVASSIGN       reduce using rule 54 (assignable -> ID .)
    ;               reduce using rule 54 (assignable -> ID .)
    '               reduce using rule 54 (assignable -> ID .)
    +               reduce using rule 54 (assignable -> ID .)
    -               reduce using rule 54 (assignable -> ID .)
    DOTADD          reduce using rule 54 (assignable -> ID .)
    DOTSUB          reduce using rule 54 (assignable -> ID .)
    *               reduce using rule 54 (assignable -> ID .)
    /               reduce using rule 54 (assignable -> ID .)
    DOTMUL          reduce using rule 54 (assignable -> ID .)
    DOTDIV          reduce using rule 54 (assignable -> ID .)
    EQ              reduce using rule 54 (assignable -> ID .)
    NOTEQ           reduce using rule 54 (assignable -> ID .)
    GT              reduce using rule 54 (assignable -> ID .)
    LT              reduce using rule 54 (assignable -> ID .)
    GTEQ            reduce using rule 54 (assignable -> ID .)
    LTEQ            reduce using rule 54 (assignable -> ID .)
    :               reduce using rule 54 (assignable -> ID .)
    ,               reduce using rule 54 (assignable -> ID .)
    )               reduce using rule 54 (assignable -> ID .)
    {               reduce using rule 54 (assignable -> ID .)
    PRINT           reduce using rule 54 (assignable -> ID .)
    IF              reduce using rule 54 (assignable -> ID .)
    WHILE           reduce using rule 54 (assignable -> ID .)
    FOR             reduce using rule 54 (assignable -> ID .)
    RETURN          reduce using rule 54 (assignable -> ID .)
    ZEROS           reduce using rule 54 (assignable -> ID .)
    ONES            reduce using rule 54 (assignable -> ID .)
    EYE             reduce using rule 54 (assignable -> ID .)
    STRING          reduce using rule 54 (assignable -> ID .)
    (               reduce using rule 54 (assignable -> ID .)
    BREAK           reduce using rule 54 (assignable -> ID .)
    CONTINUE        reduce using rule 54 (assignable -> ID .)
    ID              reduce using rule 54 (assignable -> ID .)
    INTNUM          reduce using rule 54 (assignable -> ID .)
    FLOATNUM        reduce using rule 54 (assignable -> ID .)
    [               shift and go to state 53

  ! [               [ reduce using rule 54 (assignable -> ID .) ]


state 13

    (60) expression -> range .

    ;               reduce using rule 60 (expression -> range .)
    '               reduce using rule 60 (expression -> range .)
    +               reduce using rule 60 (expression -> range .)
    -               reduce using rule 60 (expression -> range .)
    DOTADD          reduce using rule 60 (expression -> range .)
    DOTSUB          reduce using rule 60 (expression -> range .)
    *               reduce using rule 60 (expression -> range .)
    /               reduce using rule 60 (expression -> range .)
    DOTMUL          reduce using rule 60 (expression -> range .)
    DOTDIV          reduce using rule 60 (expression -> range .)
    EQ              reduce using rule 60 (expression -> range .)
    NOTEQ           reduce using rule 60 (expression -> range .)
    GT              reduce using rule 60 (expression -> range .)
    LT              reduce using rule 60 (expression -> range .)
    GTEQ            reduce using rule 60 (expression -> range .)
    LTEQ            reduce using rule 60 (expression -> range .)
    :               reduce using rule 60 (expression -> range .)
    ,               reduce using rule 60 (expression -> range .)
    )               reduce using rule 60 (expression -> range .)
    {               reduce using rule 60 (expression -> range .)
    PRINT           reduce using rule 60 (expression -> range .)
    IF              reduce using rule 60 (expression -> range .)
    WHILE           reduce using rule 60 (expression -> range .)
    FOR             reduce using rule 60 (expression -> range .)
    RETURN          reduce using rule 60 (expression -> range .)
    [               reduce using rule 60 (expression -> range .)
    ZEROS           reduce using rule 60 (expression -> range .)
    ONES            reduce using rule 60 (expression -> range .)
    EYE             reduce using rule 60 (expression -> range .)
    STRING          reduce using rule 60 (expression -> range .)
    (               reduce using rule 60 (expression -> range .)
    BREAK           reduce using rule 60 (expression -> range .)
    CONTINUE        reduce using rule 60 (expression -> range .)
    ID              reduce using rule 60 (expression -> range .)
    INTNUM          reduce using rule 60 (expression -> range .)
    FLOATNUM        reduce using rule 60 (expression -> range .)


state 14
